# src/middleware/swagger-doc.json
@@ -11,6 +11,16 @@
     "http"
   ],
   "paths": {
+    "/docs": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/books/": {
       "get": {
         "description": "",
