# src/server.js
@@ -3,7 +3,6 @@ const routesBooks = require('./routes/books.route')
 const routesBorrows = require('./routes/borrows.route')
 const swaggerUI = require("swagger-ui-express");
 const swaggerFile = require("./middleware/swagger-doc.json");
-const getConfigSwagger = require("./middleware/swagger");
 const express = require('express')
 const server = express()
 server.use(express.json());
@@ -11,7 +10,8 @@ server.set('json spaces', 2);
 
 client.connect()
 
-server.use('/doc', swaggerUI.serve, swaggerUI.setup(swaggerFile))
+server.use('/docs', swaggerUI.serve)
+server.get('/docs', swaggerUI.setup(swaggerFile))
 
 server.use('/books', routesBooks)
 server.use('/borrows', routesBorrows)
